# academic-saas-backend

./: .cursorrules  .env.example  .gitignore  CI_CD_GUIDE.md  CLAUDE.md  CREATE_PULL_REQUESTS.md  DEPLOYMENT_SUMMARY.md  DEPLOYMENT_TEST_RESULTS.md  Dockerfile  ENVIRONMENT_AUDIT.md  README.md  SETUP_INSTRUCTIONS.md  create_test_data.py  deploy-aws-infrastructure.sh  deploy_dev.sh  deployment-trigger.txt  docker-compose.dev.yml  docker-compose.prod.yml  entrypoint.sh  fix_admin_role.py  minimal-support-strategy.md  monitor-free-tier-usage.sh  nginx-dev-fixed.conf  nginx-dev-nextauth-fixed.conf  nginx-dev.conf  nginx-http.conf  nginx-local.conf  nginx-simple.conf  nginx-universal.conf  nginx.conf  pyproject.toml  requirements.txt  run_app.sh  run_local.sh  start_with_tunnel.sh  test-deployment-pr.txt  test-deployment-trigger.txt  test_ai_system.py  trigger-deploy.txt
.github/workflows/: backend-deploy.yml  deploy-dev-push.yml  deploy.yaml  deploy.yml
academic_saas_env/: pyvenv.cfg
apps/: base.py  permissions.py
apps/academic/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/ai/: ml_models.py  models.py  serializers.py  tasks.py  urls.py  views.py
apps/ai_assistant/: urls.py  views.py
apps/communication/: consumers.py  middleware.py  models.py  routing.py  serializers.py  tasks.py  urls.py  views.py
apps/dashboard/: serializers.py  system_monitor.py  urls.py  views.py
apps/organizations/: admin.py  (+4 more)
core/: asgi.py  celery.py  settings.py  urls.py
models/: academic_risk_model.pkl  academic_risk_scaler.pkl
staticfiles/: staticfiles.json
(+42 files in other folders)
